tenzir/tests/node/run/runtime_errors.tql
// node: true
// error: true

pipeline::run {
  from {x: 1}
  write_csv
  read_json
  discard
}, id="test-id"
